[package]
name = "purpl-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "purpl"
path = "src/main.rs"
test = false

[build-dependencies]
embed-resource = "2.1.1"

[dependencies]
chrono = "0.4.24"
const_format = "0.2.30"
directories = "5.0.0"
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4"
mimalloc = "0.1.36"
vulkano = { version = "0.33.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [ "errhandlingapi", "libloaderapi", "shellapi", "shlobj", "winbase", "winuser" ] }

[target.'cfg(unix)'.dependencies]
xcb = "1.2.0"

[features]
default = ["vulkan"]
vulkan = ["dep:vulkano"]
