[package]
name = "purpl-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "purpl"
path = "src/main.rs"
test = false

[build-dependencies]
embed-resource = "2.1.1"

[dependencies]
chrono = "0.4.24"
directories = "5.0.0"
fern = { version = "0.6.2", features = ["colored"] }
gpu-allocator = "0.22.0"
log = "0.4"
mimalloc = "0.1.36"
once_cell = "1.17.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

[target.'cfg(unix)'.dependencies]
xcb = "1.2.0"

[target.'cfg(not(any(macos, ios, xbox)))'.dependencies]
ash = "0.37.2"

[features]
default = ["graphics_debug"]
graphics_debug = []
