[package]
name = "purpl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "purpl"
path = "src/main.rs"
test = false

[build-dependencies]
embed-resource = "2.1.1"

[target.'cfg(not(any(macos, ios, xbox)))'.build-dependencies]
shaderc = "0.8.2"

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
directories = "5.0.0"
fern = { version = "0.6.2", features = ["colored"] }
image = "0.24.6"
log = "0.4"
mimalloc = "0.1.36"
nalgebra = "0.32.2"
once_cell = "1.17.1"
tobj = "4.0.0"
#physx = "0.18.0"

[target.'cfg(windows)'.dependencies]
gpu-allocator = "0.22.0"
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

[target.'cfg(unix)'.dependencies]
xcb = "1.2.0"

[target.'cfg(not(any(macos, ios, xbox)))'.dependencies]
ash = { git = "https://github.com/ash-rs/ash" }
vk-mem = { git = "https://github.com/MobSlicer152/vk-mem-rs" }

[features]
default = ["graphics_debug", "release_log"]
graphics_debug = []
release_log = []
verbose_log = []
